Start the implementation with builder pattern.